--- a/style.css
+++ b/style.css
@@ -365,12 +365,13 @@ button {
 
 ul,
 ol {
-  padding-left: 1.5em;
-  margin: 0.5em 0;
+  padding-left: 1.5rem;
+  margin: 0.5rem 0;
 }
 
 li {
   margin: 5px 0;
+  text-align: justify;
 }
 
 li::marker {
